--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "chalk": "1.1.1",
     "mkdirp": "0.5.1",
     "generator-jhipster": ">2.26.0",
-    "shelljs": "0.5.3"
+    "shelljs": "0.5.3",
+    "fs-extra": "0.30.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
