--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "extends": "eslint:recommended",
   "env": {
     "node": true,
-    "mocha": true
+    "jasmine": true
   },
   "rules": {
     "array-bracket-spacing": [
@@ -39,10 +39,6 @@
     "quotes": [
       2,
       "single"
-    ],
-    "space-after-keywords": [
-      2,
-      "always"
     ],
     "space-before-function-paren": [
       2,
@@ -83,7 +79,6 @@
     "eqeqeq": 2,
     "no-alert": 2,
     "no-caller": 2,
-    "no-empty-label": 2,
     "no-extend-native": 2,
     "no-extra-bind": 2,
     "no-implied-eval": 2,
@@ -126,7 +121,7 @@
         "after": true
       }
     ],
-    "space-return-throw-case": 2
+    "keyword-spacing": 2
   },
   "parserOptions": {
     "ecmaVersion": 6
