--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "dependencies": {
     "chalk": "1.1.3",
     "fs-extra": "2.1.2",
-    "generator-jhipster": "^2.27.0",
+    "generator-jhipster": ">=2.27.0",
     "mkdirp": "0.5.1",
     "semver": "5.4.1",
     "shelljs": "0.5.3",
-    "yeoman-generator": "1.1.1"
+    "yeoman-generator": ">=0.22.2"
   },
   "devDependencies": {
     "yeoman-test": "^1.6.0",
