Fixes the bugs for jhipster 5 and 6; re-indexes on start

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "email": "geraldhumphries@gmail.com",
     "url": "geraldhumphries.com"
   },
+  "contributors": [
+    "Alexander Volf <job-github@wolf-a.ru> (https://www.wolf-a.ru/)",
+    "Gabriel Adriano <gam@gamdev.com.br> (https://gamdev.com.br)"
+  ],
   "files": [
     "generators"
   ],
