--- a/package.json
+++ b/package.json
@@ -21,26 +21,23 @@
     "url": "git+https://github.com/geraldhumphries/generator-jhipster-elasticsearch-reindexer.git"
   },
   "dependencies": {
-    "chalk": "1.1.3",
-    "fs-extra": "2.1.2",
-    "generator-jhipster": ">=2.27.0",
-    "mkdirp": "0.5.1",
-    "semver": "5.4.1",
-    "shelljs": "0.5.3",
-    "yeoman-generator": ">=0.22.2"
+    "chalk": "^4.1.2",
+    "fs-extra": "^10.0.0",
+    "semver": "^7.3.5",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
-    "yeoman-test": "^1.6.0",
-    "yeoman-assert": "^3.0.0",
-    "coveralls": "^2.13.1",
-    "nsp": "^2.6.3",
-    "eslint": "^4.1.0",
-    "eslint-config-xo-space": "^0.16.0",
-    "jest": "^20.0.0",
-    "jest-cli": "^27.3.1"
+    "eslint": "^8.3.0",
+    "jest": "^27.3.1",
+    "yeoman-assert": "^3.1.1",
+    "yeoman-test": "^6.2.0"
+  },
+  "peerDependencies": {
+    "generator-jhipster": ">=2.26.2"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testTimeout": 10000
   },
   "scripts": {
     "pretest": "eslint . --fix",
