--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "chalk": "^4.1.2",
     "fs-extra": "^10.0.0",
     "semver": "^7.3.5",
-    "shelljs": "^0.8.4",
-    "yeoman-generator": ">=0.22.2"
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
